--- a/style.css
+++ b/style.css
@@ -474,3 +474,63 @@ img {
 .skills_open .skills_arrow{
     transform: rotate(-180deg);
 }
+.qualification_icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: var(--mb-2);
+}
+.qualification_button{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+   cursor: pointer;
+}
+.qualification_button:hover{
+    color: var(--first-color);
+}
+.qualification_icon{
+    font-size: 1.8rem;
+    margin-right: var(--mb-0-25);
+}
+.qualification_data{
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    column-gap: 1.5rem;
+}
+.qualification_title{
+    font-size: var(--normal-font-size-font-size);
+    font-weight: var(--font-medium);
+}
+.qualification_subtitle{
+    display: inline-block;
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
+}
+.qualification_calendar{
+    font-size: var(--smaller-font-size);
+    color: var(--text-color-light);
+}
+.qualification_rounder{
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background-color: var(--first-color);
+    border-radius: 50%;
+    margin-right: var(--mb-0-25);
+}
+.qualification_line{
+    width: 2px;
+    height: 100%;
+    background-color: var(--first-color);
+    transform: translateX(-6px);
+}
+.qualification [data-content]{
+    display: none;
+}
+.qualification_active[data-content]{
+    display: block;
+}
+.qualification_active .qualification_button{
+    color: var(--first-color);
+}
+    
